src/schema/snapshots/apollo_federation__schema__position__tests__remove_directive_from_type.snap
---
source: src/schema/position.rs
expression: schema.schema
---
directive @directiveName(enum: EnumType, scalar: ScalarType) on FIELD_DEFINITION

type Query {
  object: ObjectType @directiveName(enum: VALUE1)
  enum: EnumType @directiveName(scalar: 1)
  scalar: ScalarType
  arguments(enum: EnumType, scalar: ScalarType): ObjectType
}

enum EnumType {
  VALUE1
  VALUE2
}

scalar ScalarType

type ObjectType {
  returnEnum(inputScalar: ScalarType): EnumType
  returnScalar(inputEnum: EnumType): ScalarType
}

input InputObjectType {
  enum: EnumType
  scalar: ScalarType
}

